--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Web Dasar :V</title>
+    <title>BioLink Saya</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welkam Member Baru :)</h1>
-    <p>Singkat Saja. PAHAM. :)</p>
+    <div class="container">
+        <img src="https://via.placeholder.com/120" alt="Foto Profil">
+        <h1>Nama Kamu</h1>
+        <p>@username</p>
+
+        <a href="https://instagram.com/" target="_blank">Instagram</a>
+        <a href="https://youtube.com/" target="_blank">YouTube</a>
+        <a href="https://github.com/" target="_blank">GitHub</a>
+        <a href="mailto:kamu@email.com">Email</a>
+    </div>
 </body>
 </html>
