--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://via.placeholder.com/120" alt="Foto Profil">
+        <img src="https://raw.githubusercontent.com/PixZ19/belajar-web-dasar/refs/heads/main/1744534262969.png" alt="Foto Profil">
         <h1>Nama Kamu</h1>
         <p>@username</p>
 
