--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>BioLink Saya</title>
+    <title>Gk Tw :)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <img src="https://raw.githubusercontent.com/PixZ19/belajar-web-dasar/refs/heads/main/1744534262969.png" alt="Foto Profil">
-        <h1>Nama Kamu</h1>
-        <p>@username</p>
+        <h1>Kelompok Ubay, Rafi, Angga, Athaa</h1>
+        <p>@gatau</p>
 
         <a href="https://instagram.com/" target="_blank">Instagram</a>
-        <a href="https://youtube.com/" target="_blank">YouTube</a>
+        <a href="https://youtube.com/@PixelAnimHD" target="_blank">YouTube</a>
         <a href="https://github.com/" target="_blank">GitHub</a>
         <a href="mailto:kamu@email.com">Email</a>
     </div>
