--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="https://instagram.com/" target="_blank">Instagram</a>
         <a href="https://youtube.com/@PixelAnimHD" target="_blank">YouTube</a>
         <a href="https://github.com/" target="_blank">GitHub</a>
-        <a href="mailto:kamu@email.com">Email</a>
+        <a href="mailto:audhganteng488@gmail.com">Email</a>
     </div>
 </body>
 </html>
