--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Gk Tw :)</title>
+    <title>Gk Tw :D</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <img src="https://raw.githubusercontent.com/PixZ19/belajar-web-dasar/refs/heads/main/1744534262969.png" alt="Foto Profil">
         <h1>Kelompok Ubay, Rafi, Angga, Athaa</h1>
-        <p>@gatau</p>
+        <p>@Gatau_CariAjaSendiri</p>
 
         <a href="https://instagram.com/" target="_blank">Instagram</a>
         <a href="https://youtube.com/@PixelAnimHD" target="_blank">YouTube</a>
